--- a/uio_irq_sample.dts
+++ b/uio_irq_sample.dts
@@ -1,30 +1,34 @@
-/dts-v1/;
+/dts-v1/;/plugin/;
 / {
-	uio-irq-test@0 {
+	fragment@0 {
 		target-path = "/soc/fpga-region0";
+		__overlay__ {
+			firmware-name = "pump_axi4.rbf";
+		};
+	};
+	fragment@1 {
+		target-path = "/soc/amba";
 		#address-cells = <0x1>;
 		#size-cells = <0x1>;
-		
 		__overlay__ {
 			#address-cells = <0x1>;
 			#size-cells = <0x1>;
 
-			firmware-name = "pump_axi4.rbf";
-			
-			pump-uio@43c10000 {
+			pump-uio {
 				compatible = "generic-uio";
 				reg = <0xff202000 0x1000>;
+				interrupt-parent = <&intc>;
 				interrupts = <0x0 0x28 0x4>;
 	                };
 
 			pump-udmabuf4 {
-				compatible  = "ikwzm,udmabuf-0.10.a";
+				compatible  = "ikwzm,u-dma-buf";
 				device-name = "udmabuf4";
 				size = <0x00400000>;
 	                };
 
 			pump-udmabuf5 {
-				compatible = "ikwzm,udmabuf-0.10.a";
+				compatible = "ikwzm,u-dma-buf";
 				device-name = "udmabuf5";
 				size = <0x00400000>;
 			};
